時間変更　体験会日付追加

--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -40,8 +40,8 @@
         <br>
 
         <h2>稽古日時・場所</h2>
-        <li>火曜 19:00-20:30 更北中学校</li>
-        <li>木曜 19:00-20:30 更北中学校(小学生高学年・中学生の稽古となります)</li>
+        <li>火曜 19:30-20:30 更北中学校</li>
+        <li>木曜 19:30-20:30 更北中学校</li>
         <li>土曜 18:00-20:00 青木島小学校</li>
         <li>日曜 17:00-19:00 青木島小学校</li>
         稽古の時間や場所は、変更されることがあります。<br>
@@ -65,8 +65,8 @@
 
         <h2>会費</h2>
         <li>未就学児　月額会費0円　+　スポーツ安全保険料</li>
-        <li>小学生　月額会費1500円　+　スポーツ安全保険料</li>
-        <li>中学生　月額会費1500円　+　スポーツ安全保険料</li>
+        <li>小学生　月額会費1500円　+　スポーツ安全保険料(年額800円)</li>
+        <li>中学生　月額会費1500円　+　スポーツ安全保険料(年額800円)</li>
         <li>青年部　月額会費0円　+　スポーツ安全保険料</li>
         ※入会金は不要です。<br>
         ※月額会費は、3ヶ月ごとに集金します。<br>
@@ -78,7 +78,6 @@
         2024年度 長野市こどもの体験・学び応援事業<br>
         <a href="https://nagano-hakken.jp/" target="top">みらいハッ！ケンプロジェクト</a><br> 
         参画パートナー登録 を計画しています。<br>
-
         <br>
 
         <h2>剣道具など</h2>
@@ -112,7 +111,7 @@
         塾や他の習い事もあり、毎回参加できない団員もいます。ご家庭の都合にあわせてご参加ください。<br>
         <br>
 
-        <h2>小学生保護者の支援</h2>
+        <h2>小中学生保護者の支援</h2>
         当番(稽古施設の鍵管理等)を保護者の持ち回りでお願いしています。<br>
         初心者・低学年のお子さんの場合、保護者の方に稽古の支援をお願いすることがあります。<br>
         <br>
@@ -131,8 +130,11 @@
         <br>
 
         <h2>剣道体験会</h2>
-        例年、4月に剣道体験会を開催しています。<br>
-        2024年4月の体験会を計画中です。<br>
+        2024年4月に体験会を開催予定です。<br>
+        <li>4月27日(土) 18:00-20:00 青木島小学校</li>
+        <li>4月28日(日) 17:00-19:00 青木島小学校</li>
+        内容：面打ち体験、素振り体験、剣道着(道着、袴)体験
+        <br>
         <br>
         2023年4月の剣道体験会のチラシ<br>
         <img src="2023_taiken.jpg"><br>
