体験会画像追加

--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -130,14 +130,10 @@
         <br>
 
         <h2>剣道体験会</h2>
-        2024年4月に体験会を開催予定です。<br>
+        2024年4月に剣道体験会を開催予定です。<br>
         <li>4月27日(土) 18:00-20:00 青木島小学校</li>
         <li>4月28日(日) 17:00-19:00 青木島小学校</li>
-        内容：面打ち体験、素振り体験、剣道着(道着、袴)体験
-        <br>
-        <br>
-        2023年4月の剣道体験会のチラシ<br>
-        <img src="2023_taiken.jpg"><br>
+        内容：面打ち体験、素振り体験、剣道着(道着、袴)体験<br>
         <br>
         
         <h2>SNS</h2>
