レンタル代追加

--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -82,6 +82,11 @@
 
         <h2>剣道具など</h2>
         未就学児・小学生に対して、剣道具(面、胴、垂)、剣道着と袴をレンタルしています。<br>
+        剣道具レンタル代<br>
+        <li>面　月額100円</li>
+        <li>胴　月額50円</li>
+        <li>垂　月額50円</li>
+        <li>一式(面、胴、垂)　月額200円</li>
         剣道具(小手)は、各自で用意してください。<br>
         未就学児・小学生・中学生に対しては、入団時に竹刀を1本プレゼントします。<br>
         <br>
