三太刀情報追加

--- a/public_html/mitachi.html
+++ b/public_html/mitachi.html
@@ -28,13 +28,12 @@
     </style>
     <body>
         <h1>三太刀まつり</h1>
-        2024年4月13日(土)、川中島古戦場三太刀まつり内のイベントとして、剣道東西対抗戦と剣道体験会が開催されます。<br>
-        ぜひ、お花見ついでにご参加ください！<br>
-        詳細は、<a href="https://x.com/kosenjoumatsuri?s=20" target="top">川中島古戦場まつり公式X(ツイッター)</a>を御覧ください。<br>
-        <br>
+        2024年4月13日(土)、川中島古戦場三太刀まつり内のイベントとして、剣道大会と剣道体験会を開催します。<br>
+        <img src="2024_mitachi_chirasi_1.png" width="50%"><br>
+        <img src="2024_mitachi_chirasi_2.png" width="50%"><br>
         <br>
 
-        <h2>剣道東西対抗戦　三太刀杯</h2>
+        <h2>第2回川中島合戦剣道大会　三太刀杯</h2>
         更北地区の剣道クラブ(数チーム)の小中学生(約50人)が、川中島合戦をイメージした武田軍・上杉軍に分かれて東西対抗の試合を行います。<br>
         <img src="mitachi.jpg"><br>
         屋外での試合になりますので、応援をよろしくお願いします！<br>
@@ -45,12 +44,9 @@
         剣道未経験の未就学児・小学生・中学生のみなさん、剣道を体験してみませんか？<br>
         手ぶらでお越しください。<br>
         指導者が優しくサポートします。<br>
+        「お菓子のつかみ取り！」もあります <br>
 
-        <br>
-        体験の予定
-        <li>竹刀を持って素振り</li>
-        <li>相手の面を竹刀で打つ</li>
-        <br>
+  
 
 
         <h2>前回(2023年4月)の様子</h2>
