--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -41,13 +41,17 @@
     <h1>活動内容</h1>
 
     <h2>2024年度</h2>
+    予定　04月13日　川中島合戦剣道大会　三太刀杯(小、中)<br>
+    予定　04月27日　剣道体験会<br>
+    予定　04月28日　剣道体験会<br>
+    <br>
 
     <hr>
     <h2>2023年度</h2>
     04月01日　穂高剣道スポーツ少年団交流剣道練成会<br>
     04月08日　川中島古戦場三太刀杯<br>
-    04月23日　見学イベント<br>
-    04月30日　見学イベント<br>
+    04月23日　剣道体験会<br>
+    04月30日　剣道体験会<br>
     05月20日　松代藩文武学校杯争奪小学生選抜剣道大会(練成会)<br>
     05月21日　松代藩文武学校杯争奪小学生選抜剣道大会<br>
     07月09日　長野県小学生剣道錬成大会<br>
@@ -76,6 +80,8 @@
     03月02日　山梨　森島健男旗争奪　東日本選抜少年剣道大会　(小、中)<br>
     03月03日　山梨　森島健男旗争奪　東日本選抜少年剣道大会(練成会)　(小、中)<br>
     03月10日　富山　斎籐弥九郎顕彰碑建立記念少年剣道大会(小)
+    03月24日　卒業生を送る会<br>
+    03月31日　茨城　全国選抜少年剣道大会(小)<br>
     <br>
 
     <h3>稽古以外のイベントも楽しく活動しています</h3>
