三太刀　終了

--- a/public_html/middle_school.html
+++ b/public_html/middle_school.html
@@ -62,7 +62,7 @@
         <h3>中学1年から剣道をはじめた場合の3年間のイメージ</h3>
         <table border="1"  cellpadding="10">
             <tr>
-                <td>中学1年</td><td>09月　中体連 新人大会<br>11月　佐久っ子大会<br>11月　長野市剣道連盟 中学1年生大会<br>12月　やまびこ大会<br>12月　部内大会<br>02月　級審査(1級)<br>03月　段審査(初段)<br>その他 各種講習会、練成会(練習試合)</td>          
+                <td>中学1年</td><td>11月　佐久っ子大会<br>11月　長野市剣道連盟 中学1年生大会<br>12月　やまびこ大会<br>12月　部内大会<br>02月　級審査(1級)<br>03月　段審査(初段)<br>その他 各種講習会、練成会(練習試合)</td>          
             </tr>    
             <tr>
                 <td>中学2年</td><td>05月　中体連 大会<br>09月　中体連 新人大会<br>11月　佐久っ子大会<br>12月　やまびこ大会<br>12月　部内大会<br>その他 各種講習会、練成会(練習試合)、県内外の大会</td>
@@ -73,8 +73,8 @@
         </table>
         ※級審査は年に2回、段審査は年に4回チャンスがあります。<br>
         <font color=Red><b>
-        ※2024年度5月の中体連 大会には、団としては参加しません。<br>
-        ※2024年度9月の中体連 新人大会には、中学生の希望状況により参加申請することを計画しています。団としての中体連への申請がはじめてであるため、状況によっては参加できない場合があることをあらかじめご了承ください。<br>
+        ※2024年度の中体連 大会には、団としては参加しません。<br>
+        ※2025年度5月の中体連 大会には、中学生の希望状況により参加申請することを計画しています。団としての中体連への申請がはじめてであるため、状況によっては参加できない場合があることをあらかじめご了承ください。<br>
         </b></font>
         <br>
         <br>
@@ -100,7 +100,7 @@
         <a href="recruit.html" target="top">入団案内</a><br>
         <a href="youth.html" target="top">青年部</a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_logo_c.png"　width="40" height="40"></a>
-        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
+        <a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
         <br>
    
     
