--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -41,7 +41,8 @@
     <h1>活動内容</h1>
 
     <h2>2024年度</h2>
-    予定　04月13日　川中島合戦剣道大会　三太刀杯(小、中)<br>
+    04月06日　穂高剣道スポーツ少年団交流錬成大会(小)<br>
+    04月13日　川中島合戦剣道大会　三太刀杯(小、中)<br>
     予定　04月27日　剣道体験会<br>
     予定　04月28日　剣道体験会<br>
     <br>
