--- a/public_html/group.html
+++ b/public_html/group.html
@@ -81,7 +81,7 @@
             </tr>
             
             <tr>
-                <td rowspan="6">指導員</td><td>小山秀弥</td><td>七段</td><td>長野県代表　全日本剣道大会4回出場<br>全日本剣道連盟 社会体育初級指導員</td>
+                <td rowspan="6">指導員</td><td>小山秀弥</td><td>七段</td><td>長野県代表　全日本剣道選手権大会4回出場<br>全日本剣道連盟 社会体育初級指導員</td>
             </tr>
             <tr>
                 <td>小松甲征</td><td>四段</td><td></td>
