--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -67,7 +67,7 @@
         <li>未就学児　月額会費0円　+　スポーツ安全保険料</li>
         <li>小学生　月額会費1500円　+　スポーツ安全保険料(年額800円)</li>
         <li>中学生　月額会費1500円　+　スポーツ安全保険料(年額800円)</li>
-        <li>青年部　月額会費0円　+　スポーツ安全保険料</li>
+        <li>青年部　月額会費0円　+　スポーツ安全保険料(年額1850円)</li>
         ※入会金は不要です。<br>
         ※月額会費は、3ヶ月ごとに集金します。<br>
         ※月額会費には兄弟優遇制度があります。<br>
@@ -77,7 +77,9 @@
         <img src="nagano_mirai_0831_rogo.png"><br>
         2024年度 長野市こどもの体験・学び応援事業<br>
         <a href="https://nagano-hakken.jp/" target="top">みらいハッ！ケンプロジェクト</a><br> 
-        参画パートナー登録 を計画しています。<br>
+        参画パートナー登録しました。<br>
+        習い事・体験プログラム検索><a href="https://nagano-hakken.jp/programs/view/689" target="top">青木島剣道少年団</a><br>
+
         <br>
 
         <h2>剣道具など</h2>
