体験チラシ追加

--- a/public_html/first.html
+++ b/public_html/first.html
@@ -29,7 +29,8 @@
         青木島剣道少年団は、33年にわたり<br>
         長野県長野市更北地区で活動している剣道教室です。<br>
         小学生、中学生、そして青年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
-        <img src="202404_taiken.png" width="50%">
+        <a href="recruit.html#taiken" target="right"><img src="202404_taiken.png" width="50%"></a>
+        
         
         <br>
         <img src="top.jpg" width="50%">
