--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -136,11 +136,12 @@
         ※練成会とは、複数の団体が合同で行う稽古会・練習試合のことです。<br>
         <br>
 
-        <h2>剣道体験会</h2>
-        2024年4月に剣道体験会を開催予定です。<br>
-        <li>4月27日(土) 18:00-20:00 青木島小学校</li>
-        <li>4月28日(日) 17:00-19:00 青木島小学校</li>
+        <h2 id="taiken">剣道体験会</h2>
+        2024年4月に剣道体験会を開催します！<br>
+        <li>4月27日(土) 18:00～ 青木島小学校</li>
+        <li>4月28日(日) 17:00～ 青木島小学校</li>
         内容：面打ち体験、素振り体験、剣道着(道着、袴)体験<br>
+        <img src="202404_taiken_chirashi.png" width="50%"><br>
         <br>
         
         <h2>SNS</h2>
