--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -139,6 +139,7 @@
         <h2 id="taiken">剣道体験会</h2>
         2024年4月に剣道体験会を開催しました<br>
         ご参加いただきありがとうございました。<br>
+        「体験会」という形ではありませんが、いつでも見学・体験は可能ですので、お気軽にご連絡をお願いいたします。<br>
         <img src="202404_taiken_chirashi.png" width="50%"><br>
         <br>
         
