--- a/public_html/first.html
+++ b/public_html/first.html
@@ -29,6 +29,10 @@
         青木島剣道少年団は、33年にわたり<br>
         長野県長野市更北地区で活動している剣道教室です。<br>
         小学生、中学生、そして青年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
+        
+        <a href="recruit.html#taiken" target="right"><img src="kyouka.png" width="50%"></a><br>
+        体験は随時受付中ですので、お気軽にご連絡をお願いいたします。<br>
+        <br>
         <br>
         <img src="top.jpg" width="50%">
         <br>
