--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -137,9 +137,20 @@
         <br>
 
         <h2 id="taiken">剣道体験会</h2>
-        2024年4月に剣道体験会を開催しました<br>
+        2024年4月27日、28日に剣道体験会を開催しました。<br>
         ご参加いただきありがとうございました。<br>
-        「体験会」という形ではありませんが、いつでも見学・体験は可能ですので、お気軽にご連絡をお願いいたします。<br>
+        <br>
+        「体験会」という形ではありませんが、いつでも見学・体験は可能です。<br>
+        お気軽にご参加をお願いいたします。<br>
+        以下の日時は、場所が広いためゆっくり見学・体験ができるのでオススメです。<br>
+        5月04日(土) 18:00- 青木島小学校<br>
+        5月05日(日) 17:00- 青木島小学校<br>
+        5月18日(土) 18:00- 青木島小学校<br>
+        5月19日(日) 17:00- 青木島小学校<br>
+        5月25日(土) 18:00- 青木島小学校<br>
+        5月26日(日) 17:00- 青木島小学校<br>
+        ※日時・場所は変更の可能性があります。事前にご連絡をお願いいたします。<br>
+        <br>
         <img src="202404_taiken_chirashi.png" width="50%"><br>
         <br>
         
