--- a/public_html/first.html
+++ b/public_html/first.html
@@ -31,7 +31,8 @@
         小学生、中学生、そして青年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
         
         <a href="recruit.html#taiken" target="right"><img src="kyouka.png" width="70%"></a><br>
-        <a href="recruit.html#taiken" target="right">体験は随時受付中ですので、お気軽にご連絡をお願いいたします。</a><br>
+        体験は随時受付中ですので、お気軽にご連絡をお願いいたします。<br>
+        <a href="recruit.html#taiken" target="right"><img src="kokocli.png" width="20%"><br>
         <br>
         <br>
         <img src="top.jpg" width="50%">
