クリック　大きさ変更

--- a/public_html/first.html
+++ b/public_html/first.html
@@ -32,7 +32,7 @@
         
         <a href="recruit.html#taiken" target="right"><img src="kyouka.png" width="60%"></a><br>
         体験は随時受付中ですので、お気軽にご連絡をお願いいたします。<br>
-        <a href="recruit.html#taiken" target="right"><img src="kokocli.png" width="20%"><br>
+        <a href="recruit.html#taiken" target="right"><font size="5">日時等詳細は、こちらをクリック</font><br>
         <br>
         <br>
         <img src="top.jpg" width="50%">
