--- a/public_html/group.html
+++ b/public_html/group.html
@@ -58,10 +58,10 @@
         <li>小学6年：8名</li>
         　青木島小、三本柳小、真島小、下氷鉋小、篠ノ井東小、裾花小など<br>
         <br>
-        <li>中学1年：3名</li>
+        <li>中学1年：5名</li>
         <li>中学2年：4名</li>
         <li>中学3年：4名</li>
-        　更北中、広徳中、犀陵中、長野日本大学中など<br>
+        　更北中、広徳中、裾花中、犀陵中、長野日本大学中など<br>
         <br>
         <li>青年部：11名</li>     
 
