--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -46,8 +46,8 @@
     04月20日　中野市少年剣道練成会(小)<br>
     04月27日　剣道体験会<br>
     04月28日　剣道体験会<br>
-    05月18日　松代藩文武学校杯争奪小学生選抜剣道大会(練成会)(小)
-    05月19日　松代藩文武学校杯争奪小学生選抜剣道大会
+    05月18日　松代藩文武学校杯争奪小学生選抜剣道大会(練成会)(小)<br>
+    05月19日　松代藩文武学校杯争奪小学生選抜剣道大会(小)<br>
     <br>
 
     <hr>
