--- a/public_html/iten.html
+++ b/public_html/iten.html
@@ -15,7 +15,7 @@
         3秒後に自動的に移動します<br>
         <br>
         自動的に移動しない場合は、以下のリンクをクリックして移動してください<br>
-        <a href="https://www.aokijimakendosyonendan.com/~aokijima/index.html" >青木島剣道少年団 https://www.aokijimakendosyonendan.com/~aokijima/index.html</a>
+        <a href="https://www.aokijimakendosyonendan.com/~aokijima/index.html" >https://www.aokijimakendosyonendan.com/~aokijima/index.html</a>
         
     </body>
 </html>
