2024年7月体験会

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -48,6 +48,10 @@
     04月28日　剣道体験会<br>
     05月18日　松代藩文武学校杯争奪小学生選抜剣道大会(練成会)(小)<br>
     05月19日　松代藩文武学校杯争奪小学生選抜剣道大会(小)<br>
+    06月23日　埼玉　武陽旗少年剣道大会(小)<br>
+    予定　07月07日　剣道体験会<br>
+    予定　07月15日　長野県小学生剣道錬成大会(小)<br>
+    予定　08月25日　剣道体験会<br>
     <br>
 
     <hr>
@@ -83,12 +87,11 @@
     02月24日　湯けむり少年剣道大会　(小、中)<br>
     03月02日　山梨　森島健男旗争奪　東日本選抜少年剣道大会　(小、中)<br>
     03月03日　山梨　森島健男旗争奪　東日本選抜少年剣道大会(練成会)　(小、中)<br>
-    03月10日　富山　斎籐弥九郎顕彰碑建立記念少年剣道大会(小)
+    03月10日　富山　斎籐弥九郎顕彰碑建立記念少年剣道大会(小)<br>
     03月24日　卒業生を送る会<br>
     03月31日　茨城　全国選抜少年剣道大会(小)<br>
     <br>
 
-    <h3>稽古以外のイベントも楽しく活動しています</h3>
     <table>
         <tr><td bgcolor="#2F496E">　10月28日　ハロウィン</td></tr>
         <tr><td><img src="halloween_1.jpg" width="530" height="400"></td></tr>
