--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -132,10 +132,11 @@
         <br>
 
         <h2 id="taiken">剣道体験会</h2>
-        2024年4月27日、28日に剣道体験会を開催しました。<br>
-        ご参加いただきありがとうございました。<br>
-        <br>
-        <img src="202404_taiken_chirashi.png" width="50%"><br>
+        2024年7月・8月に剣道体験会を開催します！<br>
+        <li>7月07日(土) 17:00～ 青木島小学校</li>
+        <li>8月25日(日) 17:00～ 青木島小学校</li>
+        内容：面打ち体験、素振り体験、剣道着(道着、袴)体験等<br>
+        <img src="202407_taiken_chirashi.png" width="50%"><br>
         <br>
         
         <h2>SNS</h2>
