--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -49,8 +49,10 @@
     05月18日　松代藩文武学校杯争奪小学生選抜剣道大会(練成会)(小)<br>
     05月19日　松代藩文武学校杯争奪小学生選抜剣道大会(小)<br>
     06月23日　埼玉　武陽旗少年剣道大会(小)<br>
-    予定　07月07日　剣道体験会<br>
-    予定　07月15日　長野県小学生剣道錬成大会(小)<br>
+    06月29日～30日　合宿<br>
+    07月07日　剣道体験会<br>
+    07月14日　新潟　海の日越後少年剣道錬成大会(小)<br>
+    07月15日　長野県小学生剣道錬成大会(小)<br>
     予定　08月25日　剣道体験会<br>
     <br>
 
