活動　信州大学

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
     <head>
         <title>青木島剣道少年団</title>
@@ -53,6 +54,8 @@
     07月07日　剣道体験会<br>
     07月14日　新潟　海の日越後少年剣道錬成大会(小)<br>
     07月15日　長野県小学生剣道錬成大会(小)<br>
+    08月10日～11日　信州大学　少年少女親善剣道錬成大会
+    08月11日　日大大会
     予定　08月25日　剣道体験会<br>
     <br>
 
