--- a/public_html/first.html
+++ b/public_html/first.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
@@ -30,7 +31,7 @@
         長野県長野市更北地区で活動している剣道教室です。<br>
         小学生、中学生、そして青年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
         <br>
-        7月7日(日)・8月25日(日)に剣道体験会を開催します。<br>
+        8月25日(日)に剣道体験会を開催します。<br>
         <a href="recruit.html#taiken" target="right">詳細はこちらをクリックしてください</a><br>
         <img src="202407_taiken_chirashi.png" width="50%">
         <br>
