--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ja">
     <head>
         <title>青木島剣道少年団 入団案内</title>
@@ -132,8 +133,7 @@
         <br>
 
         <h2 id="taiken">剣道体験会</h2>
-        2024年7月・8月に剣道体験会を開催します！<br>
-        <li>7月07日(土) 17:00～ 青木島小学校</li>
+        8月に剣道体験会を開催します！<br>
         <li>8月25日(日) 17:00～ 青木島小学校</li>
         内容：面打ち体験、素振り体験、剣道着(道着、袴)体験等<br>
         <img src="202407_taiken_chirashi.png" width="50%"><br>
