--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -133,9 +133,8 @@
         <br>
 
         <h2 id="taiken">剣道体験会</h2>
-        8月に剣道体験会を開催します！<br>
-        <li>8月25日(日) 17:00～ 青木島小学校</li>
-        内容：面打ち体験、素振り体験、剣道着(道着、袴)体験等<br>
+        8月に剣道体験会を実施しました。<br>
+        ご参加いただきありがとうございます。<br>
         <img src="202407_taiken_chirashi.png" width="50%"><br>
         <br>
         
