--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -54,9 +54,9 @@
     07月07日　剣道体験会<br>
     07月14日　新潟　海の日越後少年剣道錬成大会(小)<br>
     07月15日　長野県小学生剣道錬成大会(小)<br>
-    08月10日～11日　信州大学　少年少女親善剣道錬成大会<br>
+    08月10日～11日　信州大学　少年少女親善剣道錬成大会(小、中)<br>
     08月11日　日大大会<br>
-    予定　08月25日　剣道体験会<br>
+    予定 09月22日　長野市柔剣道大会<br>
     <br>
 
     <hr>
