ワッペン追加

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -56,7 +56,9 @@
     07月15日　長野県小学生剣道錬成大会(小)<br>
     08月10日～11日　信州大学　少年少女親善剣道錬成大会(小、中)<br>
     08月11日　日大大会<br>
-    予定 09月22日　長野市柔剣道大会<br>
+    09月01日　中野市少年剣道錬成会(小)<br>
+    09月22日　長野市柔剣道大会(小、中)<br>
+    予定10月14日　小坂憲次杯<br>
     <br>
 
     <hr>
