--- a/public_html/group.html
+++ b/public_html/group.html
@@ -49,6 +49,13 @@
         <img src="policy.png">
 
         <br>
+
+        <h2 id=”wappen”>ワッペン</h2>
+        <img src="wappen.png" width="25%"><br>
+        犀川の激流をモチーフにデザイン<br>
+        波に囲まれた「尚武」の文字は太く力強い筆文字で書き、<br>
+        剣道の鍛錬を通して激流に負けない「強く・正しく・美しく」心と体を作り上げていく青木島剣道少年団の姿勢を表現しています。
+
         <h2>団員数</h2>
         <li>未就学児：1名</li>
         <li>小学1年：0名</li>
@@ -88,7 +95,7 @@
             </tr>
             
             <tr>
-                <td>田子博和</td><td>三段</td><td>全日本剣道連盟 社会体育初級指導員<br>日本スポーツ協会 剣道コーチ1(2024年10月認定予定)</td>
+                <td>田子博和</td><td>三段</td><td>全日本剣道連盟 社会体育初級指導員<br>日本スポーツ協会 剣道コーチ1</td>
             </tr>
             <tr>
                 <td>清水翔平</td><td>三段</td><td></td>
