--- a/public_html/first.html
+++ b/public_html/first.html
@@ -31,6 +31,11 @@
         長野県長野市更北地区で活動している剣道教室です。<br>
         小学生、中学生、そして青年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
         <br>
+        道着のワッペンを刷新しました。<br>
+        <img src="wappen.png" width="30%"><br>
+        <a href="group.html#wappen">ワッペンの詳細はこちら</a>
+        <br>
+        <br>
         <br>
         <img src="top.jpg" width="50%">
         <br>
