成年部　読み変更

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -58,7 +58,8 @@
     08月11日　日大大会<br>
     09月01日　中野市少年剣道錬成会(小)<br>
     09月22日　長野市柔剣道大会(小、中)<br>
-    予定10月14日　小坂憲次杯<br>
+    10月13日　真田まつり(小)<br>
+    10月14日　小坂憲次杯(小、中)<br>
     <br>
 
     <hr>
