--- a/public_html/youth.html
+++ b/public_html/youth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <title>青木島剣道少年団 青年部</title>
+        <title>青木島剣道少年団 成年部</title>
         <meta charset="UTF-8">
         <meta keywords="長野市,剣道,大人,高校生,リバ剣">
         <meta name="description" content="長野県長野市で活動している剣道教室です。高校生・大人の方も稽古に励んでいます。">
@@ -28,29 +28,33 @@
         }
     </style>
     <body>
-        <h1>青年部</h1>
+        <h1>成年部</h1>
         青木島剣道少年団では、高校生や大人の方も一緒に稽古に参加することができます。<br>
         剣道を始めてみませんか？<br>
         年齢に関係なく、40代や50代からでも大歓迎です。<br>
-        健康のために剣道を始める方や、もう一度剣道に挑戦したい方にぴったりの団です。
+        健康のために剣道を始める方や、もう一度剣道に挑戦したい方にぴったりの団です。<br>
+        <br>
+        
+        他の剣道団体の皆様もぜひご参加ください。<br>
+        稽古費用は一切かかりませんので、心ゆくまで剣道を楽しんでいただけます。<br>
+        心技体を鍛え、仲間と共に新たな挑戦を始めましょう。<br>
+        <br>
+        <br>
+
+        <h2>活動日時・場所</h2>
+        <li>土曜 20:00-20:45 青木島小学校</li>
+        <li>日曜 19:00-19:45 青木島小学校</li>
+        時間・場所は、変更の可能性があるため、事前にご連絡をお願いいたします。<br>
+        連絡先 <a href="mailto:aokijimakendosyonendan@gmail.com"><b>aokijimakendosyonendan@gmail.com</b></a>
+
         <br>
         <h2>生涯剣道</h2>
         剣道は、生涯にわたって楽しむことができる武道です。<br>
         運動が苦手な方でも大丈夫です。<br>
         経験がなくても大丈夫です。<br>
         大人から始めて初段の段位を取得することも可能です。<br>
-        <br>       
-
-        <h2>稽古のイメージ</h2>
-        体力や時間の都合に合わせて参加していただけます。<br>
-        準備体操をしっかりと行ってから稽古に入ります。<br>
-        もし、稽古中に疲れてしまった場合はいつでも休憩することができます。<br>
         <img src="youth.png"><br>
-        <br>
-
-
-
-        <br>
+        <br>     
         <br>
         <br>
         <a href="index.html" target="top">ホームへ</a><br>
