--- a/public_html/first.html
+++ b/public_html/first.html
@@ -29,11 +29,18 @@
         <h1>ようこそ!　青木島剣道少年団 ホームページへ</h1>
         青木島剣道少年団は、33年にわたり<br>
         長野県長野市更北地区で活動している剣道教室です。<br>
-        小学生、中学生、そして青年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
+        小学生、中学生、そして成年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
+
         <br>
-        道着のワッペンを刷新しました。<br>
+        ポスターを作成しました。<br>
+        成年部の時間を設けました。他の剣道団体の皆様もぜひご参加ください。<a href="youth.html" >成年部の詳細はこちら</a> <br>
+        <img src="aokijima_poster_20241014.png" width="30%"><br>
+        <br>
+
+        <br>
+        道着のワッペンを刷新しました。<a href="group.html#wappen">ワッペンの詳細はこちら</a><br>
         <img src="wappen.png" width="30%"><br>
-        <a href="group.html#wappen">ワッペンの詳細はこちら</a>
+        
         <br>
         <br>
         <br>
