地域以降削除

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -60,6 +60,15 @@
     09月22日　長野市柔剣道大会(小、中)<br>
     10月13日　真田まつり(小)<br>
     10月14日　小坂憲次杯(小、中)<br>
+    10月26日　レク　ハロウィン<br>
+    11月03日　更埴剣道大会(小、中)<br>
+    11月03日　須坂市剣道大会(小、中)<br>
+    11月04日　佐久っこ大会(小、中)<br>
+    11月23日　権堂親善少年剣道大会(小、中)<br>
+    11月30日　長野南地区少年健全育成剣道大会(小、中)<br>
+    12月01日　長野みすずライオンズクラブ杯争奪長野少年剣道大会(小、中)<br>
+    12月07日　やまびこ大会(小、中)<br>
+    12月22日　部内大会(小、中)<br>
     <br>
 
     <hr>
